--- a/jcvidb/jcvidb_app/templates/details.html
+++ b/jcvidb/jcvidb_app/templates/details.html
@@ -13,28 +13,28 @@
     <div class="container" style="margin: 5%;">
         <form class="form-horizontal" >
             <div class="form-group row">
-                <label class="control-label col-sm-2" for="id_id"><b>ID</b></label>
+                <label class="control-label col-sm-2" for="id_id"><b>Code</b></label>
                 <div class="col-sm-10">
-                    <label id="id_id" class="col-sm-10">{{prot_data.id}}</label>
+                    <label id="id_id" class="col-sm-10">{{prot_data.code}}</label>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="control-label col-sm-2" for="id_details"><b>Details</b></label>
                 <div class="col-sm-10">
-                    <textarea class="col-sm-10" id="id_details" style="border: 0px;">{{prot_data.details}}</textarea>
+                    <textarea class="col-sm-10" id="id_details" readonly style="border: 0px;">{{prot_data.details}}</textarea>
                 </div>
             </div>
 
             <div class="form-group row">
                 <label class="control-label col-sm-2" for="id_references"><b>References</b></label>
                 <div class="col-sm-10">
-                    <textarea id="id_references" class="col-sm-10" style="border: 0px;">{{prot_data.references}}</textarea>
+                    <textarea id="id_references" class="col-sm-10" readonly style="border: 0px;">{{prot_data.references}}</textarea>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="control-label col-sm-2" for="id_funding"><b>Funding:</b></label>
                 <div class="col-sm-10">
-                    <textarea class="col-sm-10" id="id_funding" style="border: 0px;">{{prot_data.funding}}</textarea>
+                    <textarea class="col-sm-10" id="id_funding" readonly style="border: 0px;">{{prot_data.funding}}</textarea>
                 </div>
             </div>
 
