--- a/jcvidb/jcvidb_app/templates/update_prot.html
+++ b/jcvidb/jcvidb_app/templates/update_prot.html
@@ -14,9 +14,9 @@
         <form class="form-horizontal" method="post" >
              {% csrf_token %}
             <div class="form-group row">
-                <label class="control-label col-sm-2" for="id_id"><b>ID</b></label>
+                <label class="control-label col-sm-2" for="id_id"><b>Code</b></label>
                 <div class="col-sm-10">
-                    <label id="id_id" class="col-sm-10">{{prot_data.id}}</label>
+                    <label id="id_id" class="col-sm-10">{{prot_data.code}}</label>
                 </div>
             </div>
             <div class="form-group row">
