--- a/jcvidb/jcvidb_app/templates/search.html
+++ b/jcvidb/jcvidb_app/templates/search.html
@@ -32,7 +32,7 @@
 
     {% for x in results %}
       <tr>
-          <td><a href="../update_prot/{{ x.id }}">{{ x.code }}</a></td>
+          <td><a href="../details/{{ x.id }}">{{ x.code }}</a></td>
           <td><textarea rows="2" cols="40" readonly style="border:0px;width: 100%;"> {{ x.details }}</textarea> </td>
           <td>{{ x.type.name }}</td>
       </tr>
