--- a/jcvidb/jcvidb_app/templates/common/header.html
+++ b/jcvidb/jcvidb_app/templates/common/header.html
@@ -19,6 +19,10 @@
         .table-responsive {
               max-height:300px;
           }
+         a {
+            text-decoration: none;
+            color: inherit;
+        }
         nav ul li.active a {
     /* Add your styles for the active link */
     font-weight: bold;
