--- a/jcvidb/jcvidb_app/templates/common/header.html
+++ b/jcvidb/jcvidb_app/templates/common/header.html
@@ -18,6 +18,7 @@
         }
         .table-responsive {
               max-height:300px;
+                max-width: 1000px;
           }
          a {
             text-decoration: none;
