--- a/jcvidb/jcvidb_app/templates/data_postform.html
+++ b/jcvidb/jcvidb_app/templates/data_postform.html
@@ -1,15 +1,15 @@
 {% extends "./common/header.html" %}
 
 {% block content %}
-{% for msg in messages %}
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-  <strong>Failed!!</strong>   {{ msg }}
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+<!--{% for msg in messages %}-->
+<!--<div class="alert alert-danger alert-dismissible fade show" role="alert">-->
+<!--  <strong>Failed!!</strong>   {{ msg }}-->
+<!--  <button type="button" class="close" data-dismiss="alert" aria-label="Close">-->
+<!--    <span aria-hidden="true">&times;</span>-->
+<!--  </button>-->
+<!--</div>-->
 
-{% endfor %}
+<!--{% endfor %}-->
 
 <h1 class="text-center"  > Post Details</h1>
 <hr>
