--- a/jcvidb/jcvidb_app/templates/registration_form.html
+++ b/jcvidb/jcvidb_app/templates/registration_form.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 {% for msg in messages %}
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-  <strong>Failed!!</strong>   {{ msg }}
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+<!--<div class="alert alert-danger alert-dismissible fade show" role="alert">-->
+<!--  <strong>Failed!!</strong>   {{ msg }}-->
+<!--  <button type="button" class="close" data-dismiss="alert" aria-label="Close">-->
+<!--    <span aria-hidden="true">&times;</span>-->
+<!--  </button>-->
+<!--</div>-->
 
-{% endfor %}
+<!--{% endfor %}-->
 
 <h1 class="text-center"  >User Registration</h1>
 <hr>
