--- a/jcvidb/jcvidb_app/templates/file_upload.html
+++ b/jcvidb/jcvidb_app/templates/file_upload.html
@@ -22,7 +22,7 @@
                         {% csrf_token %}
                         <div class="form-group">
                            <label for="attachment"><h1>Attachment:</h1></label><br>
-                             <input class="form-control" type="file" id="attachment" name="attachment" >
+                             <input class="form-control" type="file" id="attachment" required name="attachment" >
                         </div>
                         <br>
 
